# asr-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
asr_lab/: __init__.py
asr_lab/audio/: __init__.py  augmentation.py  features.py
asr_lab/data/: __init__.py  datasets.py  manifest.py  streaming.py
asr_lab/evaluation/: __init__.py  evaluator.py
asr_lab/models/: __init__.py  base.py
asr_lab/models/conformer/: __init__.py  config.py  encoder.py  model.py
asr_lab/models/omni_router/: __init__.py  config.py  encoder.py  model.py  posemb.py
asr_lab/models/ssm/: __init__.py  config.py  encoder.py  model.py
asr_lab/models/whisper/: __init__.py  config.py  decoder.py  encoder.py  model.py
asr_lab/reproducibility/: __init__.py  deterministic.py  environment.py  hash.py  seeding.py
asr_lab/tokenizers/: __init__.py  base.py
asr_lab/training/: __init__.py  dataset.py  precision.py  trainer.py
asr_lab/utils/: __init__.py  metrics.py
configs/: omni_router_0.6b_a100.yaml  omni_router_base_a100.yaml  ssm_19m_a100.yaml  ssm_19m_yodas.yaml
scripts/: __init__.py  evaluate.py  prepare_data.py  prepare_data_fast.py  prepare_librispeech.py  run_training.sh  train.py  train_distributed.py  train_tokenizer.py  train_yodas.py
